including secure content

--- a/include_upper.html
+++ b/include_upper.html
@@ -25,8 +25,8 @@ img.emoji {
 <link rel='stylesheet' id='woocommerce-layout-css'  href='css/woocommerce/assets/css/woocommerce-layouta1a3.css?ver=2.3.13' type='text/css' media='all' />
 <link rel='stylesheet' id='woocommerce-smallscreen-css'  href='css/woocommerce/assets/css/woocommerce-smallscreena1a3.css?ver=2.3.13' type='text/css' media='only screen and (max-width: 768px)' />
 <link rel='stylesheet' id='woocommerce-general-css'  href='css/woocommerce/assets/css/woocommercea1a3.css?ver=2.3.13' type='text/css' media='all' />
-<link rel='stylesheet' id='theme-font-Roboto-css'  href='http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,700,700italic&amp;subset=latin,latin-ext,cyrillic,cyrillic-ext' type='text/css' media='all' />
-<link rel='stylesheet' id='theme-font-Love-Ya-Like-A-Sister-css'  href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister:400&amp;subset=latin' type='text/css' media='all' />
+<link rel='stylesheet' id='theme-font-Roboto-css'  href='https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,700,700italic&amp;subset=latin,latin-ext,cyrillic,cyrillic-ext' type='text/css' media='all' />
+<link rel='stylesheet' id='theme-font-Love-Ya-Like-A-Sister-css'  href='https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister:400&amp;subset=latin' type='text/css' media='all' />
 <link rel='stylesheet' id='themerex-fontello-style-css'  href='css/css/fontello/css/fontello.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='themerex-main-style-css'  href='css/style.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='themerex-shortcodes-style-css'  href='css/fw/shortcodes/shortcodes.min.css' type='text/css' media='all' />
