--- a/header.html
+++ b/header.html
@@ -38,8 +38,8 @@
                     </li>
                     <li id="menu-item-829" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-829"><a href="workshop.php">Learning Centers</a></li>
                     <li id="menu-item-755" class="menu-item menu-item-type-taxonomy menu-item-object-product_cat menu-item-755"><a href="contact.php">Contact Us</a></li>
-                    
-                    <li id="menu-item-829" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-829"><a href="https://admin.studyabacus.com">Admin</a></li>
+
+                    <li id="menu-item-829" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-829"><a href="https://admin.studyabacus.com">Login</a></li>
                     </li>
                 </ul>
             </nav>
